--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>road-trip-blog</title>
+    <title>Katie and Cory go places together</title>
   </head>
   <body>
     <div id="app"></div>
